fixed news/events spacing refs #27136

--- a/public_html/resources/scss/infocus.scss
+++ b/public_html/resources/scss/infocus.scss
@@ -1911,30 +1911,32 @@ div.video_module {
 .homepage--callouts {
   .callout {
     height: 100%;
-    .button--primary {
+    .button--primary, .link--inverted {
         position: absolute;
-        bottom: 77px;
+        bottom: 36px;
+        margin-bottom: 0px;
     }
   }
   .link--inverted {
-    clear: both;
-    display: block;
     text-align: center;
     color: $infocus_blue !important;
     background-color: $infocus_light_blue;
+    right: 2.5em;
   }
   h5 {
-    margin-bottom: 1em;
+    margin-bottom: 1.85em;
+    text-align: left;
     a {
       color: $infocus_light_blue;
       &:hover { color: $white; }
     }
   }
   .callout--copy {
-    .link {
+    padding-bottom: 50px !important;
+    .link--primary {
       position: absolute;
       width: 200px;
-      bottom: -8px;
+      bottom: 22px;
       left: 50%;
       margin-left: -100px;
       background-color: transparent;
